css overflow fix

--- a/frontend/style.less
+++ b/frontend/style.less
@@ -134,17 +134,18 @@ html, body {
 
 .message-user1 {
   color: #CC3333;
-  overflow: hidden;
   font-family: Verdana;
 }
 
 .message-user2 {
   color: #0000CC;
-  overflow: hidden;
   font-family: Verdana;
 }
 
 .message-time {
-  overflow: hidden;
   color: #666600;
+}
+
+.overflowhidden {
+  overflow: hidden;
 }
